@@ -30,8 +30,8 @@
 
 #	define ZBX_MUTEX_NAME		wchar_t *
 
-#	define ZBX_MUTEX_LOG    	TEXT("ZBX_MUTEX_LOG")
-#	define ZBX_MUTEX_PERFSTAT  	TEXT("ZBX_MUTEX_PERFSTAT")
+#	define ZBX_MUTEX_LOG		TEXT("ZBX_MUTEX_LOG")
+#	define ZBX_MUTEX_PERFSTAT	TEXT("ZBX_MUTEX_PERFSTAT")
 
 #else /* not _WINDOWS */
 
@@ -51,14 +51,9 @@
 #	define ZBX_MUTEX_CACHE_IDS	4
 #	define ZBX_MUTEX_CONFIG		5
 #	define ZBX_MUTEX_STRPOOL	6
-/* This has to be the last MUTEX in the list with MAX number */
 #	define ZBX_MUTEX_COUNT		7
 
 #	define ZBX_MUTEX_MAX_TRIES	20 /* seconds */
-
-#	if defined(HAVE_SQLITE3)
-
-#	endif
 
 #endif /* _WINDOWS */
 
@@ -72,6 +67,8 @@ void	__zbx_mutex_lock(const char *filename, int line, ZBX_MUTEX *mutex);
 void	__zbx_mutex_unlock(const char *filename, int line, ZBX_MUTEX *mutex);
 int	zbx_mutex_destroy(ZBX_MUTEX *mutex);
 
+#if defined(HAVE_SQLITE3)
+
 /*********************************************************/
 /*** PHP Semaphore functions using System V semaphores ***/
 /*********************************************************/
@@ -79,25 +76,18 @@ int	zbx_mutex_destroy(ZBX_MUTEX *mutex);
 #define PHP_MUTEX_OK	1
 #define PHP_MUTEX_ERROR	0
 
-typedef struct {
-	int semid;
-	int count;
-} PHP_MUTEX;
+typedef struct
+{
+	int	semid;
+	int	count;
+}
+PHP_MUTEX;
 
-#if defined(HAVE_SQLITE3) && !defined(_WINDOWS)
+int	php_sem_get(PHP_MUTEX *sem_ptr, const char *path_name);
+int	php_sem_acquire(PHP_MUTEX *sem_ptr);
+int	php_sem_release(PHP_MUTEX *sem_ptr);
+int	php_sem_remove(PHP_MUTEX *sem_ptr);
 
-int php_sem_get(PHP_MUTEX* sem_ptr, char* path_name);
-int php_sem_acquire(PHP_MUTEX* sem_ptr);
-int php_sem_release(PHP_MUTEX* sem_ptr);
-int php_sem_remove(PHP_MUTEX* sem_ptr);
+#endif	/* HAVE_SQLITE3 */
 
-#else /* !HAVE_SQLITE3 || _WINDOWS */
-
-#	define php_sem_get(sem_ptr, path_name) PHP_MUTEX_OK
-#	define php_sem_acquire(sem_ptr)        PHP_MUTEX_OK
-#	define php_sem_release(sem_ptr)        PHP_MUTEX_OK
-#	define php_sem_remove(sem_ptr)         PHP_MUTEX_OK
-
-#endif  /* HAVE_SQLITE3 && !_WINDOWS */
-
-#endif /* ZABBIX_MUTEXS_H */
+#endif	/* ZABBIX_MUTEXS_H */
