@@ -163,6 +163,9 @@
 #endif
 
 int	zbx_db_connect(char *host, char *user, char *password, char *dbname, char *dbschema, char *dbsocket, int port);
+#ifdef HAVE_SQLITE3
+void	zbx_create_sqlite3_mutex(const char *dbname);
+#endif	/* HAVE_SQLITE3 */
 void	zbx_db_init(char *host, char *user, char *password, char *dbname, char *dbschema, char *dbsocket, int port);
 void    zbx_db_close();
 
