@@ -453,14 +453,6 @@ int MAIN_ZABBIX_ENTRY(void)
 	zabbix_log(LOG_LEVEL_WARNING, "IPv6 support:          " IPV6_FEATURE_STATUS);
 	zabbix_log(LOG_LEVEL_WARNING, "**************************");
 
-#ifdef  HAVE_SQLITE3
-	if(ZBX_MUTEX_ERROR == php_sem_get(&sqlite_access, CONFIG_DBNAME))
-	{
-		zbx_error("Unable to create mutex for sqlite");
-		exit(FAIL);
-	}
-#endif /* HAVE_SQLITE3 */
-
 	DBinit();
 
 	init_database_cache(zbx_process);
@@ -701,9 +693,9 @@ void	zbx_on_exit()
 	free_ipmi_handler();
 #endif
 
-#ifdef  HAVE_SQLITE3
+#ifdef HAVE_SQLITE3
 	php_sem_remove(&sqlite_access);
-#endif /* HAVE_SQLITE3 */
+#endif	/* HAVE_SQLITE3 */
 
 	zabbix_log(LOG_LEVEL_INFORMATION, "Zabbix Proxy stopped. Zabbix %s (revision %s).",
 		ZABBIX_VERSION,
