@@ -57,6 +57,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
 
+ - [ZBX-3274] fixed SQLite3 semaphore errors while starting server or proxy (Sasha)
  - [ZBX-2914] add Ubuntu upstart files; thanks to S. Canchon (Richlv)
  - [ZBX-3381] negative multipliers for items with value type "numeric (float)" are now allowed (KB)
  - [ZBX-1357] updated Japanese translation (Richlv)
